portal_front/policies/kyverno/require-readonly-rootfs.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-readonly-rootfs
spec:
  validationFailureAction: Enforce
  background: false
  rules:
    - name: require-ro-rootfs-on-controllers
      match:
        any:
          - resources:
              kinds: [Deployment,StatefulSet,DaemonSet]
      validate:
        message: "Containers must set readOnlyRootFilesystem: true"
        pattern:
          spec:
            template:
              spec:
                containers:
                  - securityContext:
                      readOnlyRootFilesystem: true
                =(initContainers):
                  - securityContext:
                      readOnlyRootFilesystem: true
    - name: require-ro-rootfs-on-pod
      match:
        any:
          - resources:
              kinds: [Pod]
      validate:
        message: "Containers must set readOnlyRootFilesystem: true"
        pattern:
          spec:
            containers:
              - securityContext:
                  readOnlyRootFilesystem: true
            =(initContainers):
              - securityContext:
                  readOnlyRootFilesystem: true
